# oglearn

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
app/: CMakeLists.txt
app/inc/: BufferObject.hpp  ElementBufferObject.hpp  Shader.hpp  ShaderProgram.hpp  TextureObject.hpp  VertexArrayObject.hpp  VertexAttributeDescriptor.hpp  VertexBufferObject.hpp
app/inc/utils/: Paths.hpp
app/shaders/basic/: fragment.glsl
app/shaders/textures/: fragment.glsl  vertex.glsl
app/shaders/transforms/: fragment.glsl  vertex.glsl
app/src/: ElementBufferObject.cpp  Shader.cpp  ShaderProgram.cpp  TextureObject.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp  main.cpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt  LICENSE.md  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/stb_image/: CMakeLists.txt  README.md
utils/: CMakeLists.txt
utils/inc/: File.hpp
utils/src/: File.cpp
